# twmc

./: .gitignore  README.md  TODO.md  deps.sh  dune  dune-project
doc/: Makefile  gamma.tex
tests/: dune  test.ml  test_hashcons.ml  test_twmc.ml
twmc/: dune  lexer.mll  parser.mly  twmc.ml
twmclib/: Enat.ml  Enat.mli  EvLinear.ml  EvLinear.mli  EventuallyAffine.mli  Regular.ml  backends.ml  backends.mli  basic.ml  basic.mli  compact.ml  compact.mli  counterexample.ml  counterexample.mli  countermodel.ml  countermodel.mli  diagram.ml  diagram.mli  dune  enat.ml  enat.mli  equal.ml  equal.mli  hashcons.ml  hashcons.mli  logic.ml  normalize.ml  normalize.mli  options.ml  print.ml  print.mli  problem.ml  problem.mli  rational.ml  rational.mli  result.ml  result.mli  sample.ml  sample.mli  sampler.ml  (+15 more)
